--- a/W6-automatic-differentiation.ipynb
+++ b/W6-automatic-differentiation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "b9652c16-5216-4e9b-93c3-5cca0b59aa06",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "centred_diff (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,38 +88,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4e56ff4-a1dc-4eb5-8190-834ece1df142",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eba85f91-8111-497a-bd4c-8c86a1d074d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f493059-da9a-4fd4-9a55-08dc9810f8b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07baff2f-c40c-4d81-abd8-b05a4e25073f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "12101b45-ce2e-4d22-88a6-2c0ba5971994",
    "metadata": {},
@@ -137,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f78c93b4-1515-46f6-a0ae-d1d5628ce2d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "struct DN \n",
+    "struct DN   # \"dual number\"\n",
     "    val\n",
     "    deriv\n",
     "end"
@@ -158,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "faf559d1-1e5d-4be1-a2b5-978369119c80",
    "metadata": {},
    "outputs": [],
@@ -178,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "0e4572ab-e68e-4cc6-a5d4-99355af4af06",
    "metadata": {},
    "outputs": [],
@@ -193,28 +161,28 @@
    "id": "b4d54469-c823-4db5-a642-c41e974f2c73",
    "metadata": {},
    "source": [
-    "Evaluate $f(a, b, c) = c(a+b)^2$."
+    "Evaluate $f(a, b, c) = c(a+2b)^2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "0f71a2b2-0984-46b7-8459-81d2ef5b1e1c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DN(4.5, 6.0)"
+       "DN(8.0, 8.0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = c*(a + b)^2  # c(a+b)*2*1 "
+    "d = c*(a + DN(2.0, 0.0)*b)^2  # c(a+b)*2*1 "
    ]
   },
   {
@@ -227,17 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "fa6cf0f6-3f43-469a-8ea2-503c622c0926",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DN(4.5, [6.0, 6.0, 2.25])"
+       "DN(8.0, [8.0, 16.0, 4.0])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +214,43 @@
     "a = DN(1.0, [1.0, 0.0, 0.0])\n",
     "b = DN(0.5, [0.0, 1.0, 0.0])\n",
     "c = DN(2.0, [0.0, 0.0, 1.0])\n",
-    "d = c*(a + b)^2  "
+    "d = c*(a + DN(2.0, 0.0)*b)^2  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a56252f4-282f-4063-be57-8e53d8bc4a2e",
+   "metadata": {},
+   "source": [
+    "Check. Compute d(a,b,c) and d/da, d/db, d/dc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "158a2d66-3eb1-46a9-af46-4cfa1ede4c98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df(1, 0.5, 2) = 8.0\n",
+      "dda(1, 0.5, 2) = 8.0\n",
+      "ddb(1, 0.5, 2) = 16.0\n",
+      "ddc(1, 0.5, 2) = 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df(a,b,c) = c*(a+2*b)^2\n",
+    "dda(a,b,c) = c*(a+2*b)*2\n",
+    "ddb(a,b,c) = c*(a+2*b)*2*2\n",
+    "ddc(a,b,c) = (a+2*b)^2\n",
+    "@show df(1, 0.5, 2)\n",
+    "@show dda(1, 0.5, 2)\n",
+    "@show ddb(1, 0.5, 2)\n",
+    "@show ddc(1, 0.5, 2);"
    ]
   },
   {
@@ -264,12 +268,12 @@
    "id": "f80e65f2-f857-46bf-9707-36776642280d",
    "metadata": {},
    "source": [
-    "Use the ForwardDiff library."
+    "For a complete implementation of this idea, use the ForwardDiff library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e1887be9-f960-48ee-9913-30279c1b5ed5",
    "metadata": {},
    "outputs": [],
@@ -300,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "a17caa7b-f909-4d37-b02c-f1f8756575db",
    "metadata": {},
    "outputs": [
@@ -310,7 +314,7 @@
        "-20.752991086118303"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,45 +334,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "2826f86e-f977-4c9e-b243-c490f9c22c0e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-20.752991086118303"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df(pi) = -20.752991086118303\n",
+      "df(pi) - ForwardDiff.derivative(f, pi) = 0.0\n"
+     ]
     }
    ],
    "source": [
     "df(x) = cos(exp(x)+4*log(x))*(exp(x)+4/x)\n",
-    "df(pi)"
+    "@show df(pi)\n",
+    "@show df(pi) - ForwardDiff.derivative(f, pi);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "235592a3-5cf9-434b-bdca-e2b2e4241203",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-20.75299089493443"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "centred_diff(f, pi, 1.0e-5) = -20.75299089493443\n",
+      "centred_diff(f, pi, 1.0e-5) - ForwardDiff.derivative(f, pi) = 1.9118387228900247e-7\n"
+     ]
     }
    ],
    "source": [
-    "centred_diff(f, pi, 0.00001)"
+    "@show centred_diff(f, pi, 1e-5)\n",
+    "@show centred_diff(f, pi, 1e-5) - ForwardDiff.derivative(f, pi);"
    ]
   },
   {
