--- a/W6-automatic-differentiation.ipynb
+++ b/W6-automatic-differentiation.ipynb
@@ -485,9 +485,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "843acd8b",
+   "metadata": {},
+   "source": [
+    "## Higher order derivatives\n",
+    "\n",
+    "To get a second or higher order derivative, compose the derivative function with itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7ad8b2d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(2) = 45\n",
+      "df(2) = 92\n",
+      "d2f(2) = 142\n",
+      "d3f(2) = 144\n",
+      "d4f(2) = 72\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "72"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(x) = 3*x^4 - x^2 + 1\n",
+    "df(x) = ForwardDiff.derivative(f,x)\n",
+    "d2f(x) = ForwardDiff.derivative(df,x)\n",
+    "d3f(x) = ForwardDiff.derivative(d2f,x)\n",
+    "d4f(x) = ForwardDiff.derivative(d3f,x)\n",
+    "@show f(2)\n",
+    "@show df(2)\n",
+    "@show d2f(2)\n",
+    "@show d3f(2)\n",
+    "@show d4f(2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daee5e6b-552c-40be-846e-deea696a6dcf",
+   "id": "adbc3bcb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -495,7 +546,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -503,7 +554,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
