--- a/W6-automatic-differentiation.ipynb
+++ b/W6-automatic-differentiation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "b9652c16-5216-4e9b-93c3-5cca0b59aa06",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "centred_diff (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f551500d-280d-4a56-ab27-e0cb6a602f0d",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2f9d82c8-1d61-4dcf-8b38-e7a00d45e31d",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "f78c93b4-1515-46f6-a0ae-d1d5628ce2d1",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "faf559d1-1e5d-4be1-a2b5-978369119c80",
    "metadata": {},
    "outputs": [],
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "0e4572ab-e68e-4cc6-a5d4-99355af4af06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = DN(1.0, 1.0)\n",
-    "b = DN(0.5, 0.0)\n",
-    "c = DN(2.0, 0.0);"
+    "a = DN(1.0, 0.0) # da/da = 1\n",
+    "b = DN(0.5, 1.0) # db/da = 0\n",
+    "c = DN(2.0, 0.0);# dc/da = 0"
    ]
   },
   {
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "DN(8.0, 8.0)"
+       "DN(8.0, 16.0)"
       ]
      },
      "execution_count": 24,
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "fa6cf0f6-3f43-469a-8ea2-503c622c0926",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "DN(8.0, [8.0, 16.0, 4.0])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "158a2d66-3eb1-46a9-af46-4cfa1ede4c98",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e1887be9-f960-48ee-9913-30279c1b5ed5",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "6.0"
+       "8.0"
       ]
      },
      "execution_count": 20,
@@ -299,12 +299,12 @@
     }
    ],
    "source": [
-    "ForwardDiff.derivative(a -> 2.0*(a+0.5)^2, 1.0)"
+    "ForwardDiff.derivative(a -> 2.0*(a + 2*0.5)^2, 1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "a17caa7b-f909-4d37-b02c-f1f8756575db",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "-20.752991086118303"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "2826f86e-f977-4c9e-b243-c490f9c22c0e",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "235592a3-5cf9-434b-bdca-e2b2e4241203",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "995502f1-c839-4bbd-b1af-6c701f95f905",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.012523 seconds\n"
+      "  0.008932 seconds\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "4f88aea5-a461-4589-8f99-609b5600d28d",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.006777 seconds\n"
+      "  0.004735 seconds\n"
      ]
     }
    ],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "ba712252-1b99-4845-9ea1-50a9a87802aa",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "f6cabc38-6eaf-47ec-b6f7-7499339fe658",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "7ad8b2d0",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "72"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,8 +537,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "adbc3bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000000 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@time ForwardDiff.derivative(d4f, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "136ac3ba-8813-4ec5-a3d7-fb4d03df8431",
+   "metadata": {},
+   "source": [
+    "## Functions of more than one variable\n",
+    "\n",
+    "Examples of gradients and hessians for functions from $\\mathbb{R}^n \\to \\mathbb{R}$ and examples of jacobians for functions from $\\mathbb{R}^n \\to \\mathbb{R^m}$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a29444ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       "  7.0\n",
+       " 11.583853163452858\n",
+       "  5.545177444479562"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1(x) = x[1] * x[2] ^ x[3] + sin(x[2]) - log(x[1])\n",
+    "ForwardDiff.gradient(f1, [1.0, 2.0, 3.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "447aa7ce-de3d-48dc-a000-32803f69ea37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       "  1.0      12.0      5.54518\n",
+       " 12.0      11.0907  12.3178\n",
+       "  5.54518  12.3178   3.84362"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ForwardDiff.hessian(f1, [1.0, 2.0, 3.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e260e3bf-106a-430b-8ee4-54fd14e60e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×2 Matrix{Float64}:\n",
+       "  2.0        1.0\n",
+       " -1.0        1.0\n",
+       " -0.224845  -0.765147"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f2(x) = [ x[1] * x[2] , x[2] - x[1], sin(x[1])*cos(x[2]) ]\n",
+    "ForwardDiff.jacobian(f2, [1.0, 2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ee9ed6da-18ac-44c7-9d69-413e36033aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From week 5, nonlinear curves\n",
+    "function func(x)\n",
+    "    [  exp(x[2]-x[1]) - 2,\n",
+    "       x[1]*x[2] + x[3],\n",
+    "       x[2]*x[3] + x[1]^2 - x[2]\n",
+    "    ];\n",
+    "end;\n",
+    "   \n",
+    "function jac(x)\n",
+    "    [ \n",
+    "      -exp(x[2]-x[1])  exp(x[2]-x[1])   0\n",
+    "       x[2]            x[1]             1\n",
+    "       2*x[1]          x[3]-1           x[2]\n",
+    "    ];\n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f589d53d-cf74-4632-9b3f-b2a41565dc93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " -2.71828  2.71828  0.0\n",
+       "  2.0      1.0      1.0\n",
+       "  2.0      2.0      2.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ForwardDiff.jacobian(func, [1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b762eb9f-90bf-45bc-beb9-c2ae3b427341",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " -2.71828  2.71828  0.0\n",
+       "  2.0      1.0      1.0\n",
+       "  2.0      2.0      2.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jac([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f8b91785-3c11-42cd-99e7-ee15ca30ddc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show that the error is 0 for randomly selected values\n",
+    "total_error = 0.0\n",
+    "for i in 1:10000\n",
+    "    t = randn(3)\n",
+    "    total_error += sum(abs.(ForwardDiff.jacobian(func, t) .- jac(t)))\n",
+    "end\n",
+    "total_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1ba57f4-616f-4f8a-99ca-6dabbcd5e6fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -546,7 +757,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -554,7 +765,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.5"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
