--- a/W7-integration.ipynb
+++ b/W7-integration.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "912584aa-e8aa-4125-99ca-a34969e8fff1",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "(0.9500042097035591, 9.329403916069623e-11)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e62da798-70dc-4670-a9db-c2158da04ddd",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "(2.4091565809390083, 3.2917326638795794e-8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,6 +53,28 @@
    "source": [
     "f2(x) = x*sin(1/x)\n",
     "quadgk(f2, 0, pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7354c502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19969.999999999996, 0.0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f3(x) = x^4 - 3\n",
+    "quadgk(f3, 0, 10)"
    ]
   },
   {
@@ -67,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "21d70b52-7547-42a0-aa4f-2745c8e8b522",
    "metadata": {},
    "outputs": [
@@ -77,7 +99,7 @@
        "trapezoid (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,35 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "0bfcc3c5-289a-4703-8a03-a8a679fc65a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9499748747898116"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trapezoid(f1, -1.96, 1.96, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7eb64231-7bd1-4278-bd7a-a111c172576f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.4078239108394297"
+       "0.9500039163481598"
       ]
      },
      "execution_count": 17,
@@ -131,7 +132,28 @@
     }
    ],
    "source": [
-    "trapezoid(f2, eps(), pi, 100)"
+    "trapezoid(f1, -1.96, 1.96, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7eb64231-7bd1-4278-bd7a-a111c172576f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4091565957262713"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trapezoid(f2, eps(), pi, 100000)"
    ]
   },
   {
@@ -146,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "0b6cf2a2-7df7-42d1-8ce5-d31f77e80d6d",
    "metadata": {},
    "outputs": [
@@ -156,7 +178,7 @@
        "simpson (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,17 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "c66c2419-d9cf-4c20-93e1-e5e3a8019691",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9500041945590286"
+       "0.9500041945590283"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "14384be0-46a8-467d-9105-8ba18927e4b6",
    "metadata": {},
    "outputs": [
@@ -208,7 +230,7 @@
        "2.4094340233477354"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "c7b6686e-5041-43b7-8c88-383b8d7ce44b",
    "metadata": {},
    "outputs": [
@@ -237,7 +259,7 @@
        "simpson2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "16edd82b-095c-47b5-91c7-a0d1aa6c87a2",
    "metadata": {},
    "outputs": [
@@ -265,7 +287,7 @@
        "0.9500041945590284"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "c29284a3-2fb8-40af-a74c-740dd8e43067",
    "metadata": {},
    "outputs": [
@@ -286,13 +308,55 @@
        "2.409434023347735"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "simpson2(f2, eps(), pi, 2^7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8718ea24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2509998964918078e15"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simpson2(x -> 1/x, eps(1.0), 10, 6) # not particularly useful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6abad7f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5637498706147884e14"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simpson2(x -> 1/x, eps(10.0), 10, 6)"
    ]
   },
   {
@@ -307,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "id": "be15374e-7d96-4b4c-b942-be6c9865d3aa",
    "metadata": {},
    "outputs": [
@@ -317,7 +381,7 @@
        "intadapt (generic function with 5 methods)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,8 +419,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "id": "0d4c2786-02c7-412d-a668-4dafef4754ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9500041953973487, [-1.96, -1.89875, -1.8375, -1.7762499999999999, -1.7149999999999999, -1.6843749999999997, -1.6537499999999998, -1.623125, -1.5924999999999998, -1.561875  …  1.561875, 1.5924999999999998, 1.623125, 1.6537499999999998, 1.6843749999999997, 1.7149999999999999, 1.7762499999999999, 1.8375, 1.89875, 1.96])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q, nodes = intadapt(f1, -1.96, 1.96, 1e-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9db375d4",
    "metadata": {},
    "outputs": [
     {
@@ -365,34 +450,81 @@
        "0.9500041953973487"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "intadapt(f1, -1.96, 1.96, 1e-8)[1]"
+    "q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
+   "id": "0f575c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104-element Vector{Float64}:\n",
+       " 0.06125000000000003\n",
+       " 0.06125000000000003\n",
+       " 0.06125000000000003\n",
+       " 0.06125000000000003\n",
+       " 0.030625000000000124\n",
+       " 0.030624999999999902\n",
+       " 0.030624999999999902\n",
+       " 0.030625000000000124\n",
+       " 0.030624999999999902\n",
+       " 0.030624999999999902\n",
+       " 0.030625000000000124\n",
+       " 0.030624999999999902\n",
+       " 0.030624999999999902\n",
+       " ⋮\n",
+       " 0.030624999999999902\n",
+       " 0.030625000000000124\n",
+       " 0.030624999999999902\n",
+       " 0.030624999999999902\n",
+       " 0.030625000000000124\n",
+       " 0.030624999999999902\n",
+       " 0.030624999999999902\n",
+       " 0.030625000000000124\n",
+       " 0.06125000000000003\n",
+       " 0.06125000000000003\n",
+       " 0.06125000000000003\n",
+       " 0.06125000000000003"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(nodes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "fd305930-057a-46b7-84a0-9bbdf72b7718",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.4091451403911783"
+       "(2.4091451403911783, [2.220446049250313e-16, 0.001533980787885863, 0.003067961575771504, 0.004601942363657145, 0.006135923151542786, 0.006183860051164213, 0.006231796950785639, 0.006279733850407065, 0.006327670750028491, 0.006375607649649917  …  2.5034566458293668, 2.552544031041707, 2.6016314162540475, 2.650718801466388, 2.699806186678728, 2.748893571891069, 2.84706834231575, 2.945243112740431, 3.043417883165112, 3.141592653589793])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "intadapt(f2, eps(), pi, 1e-8)[1]"
+    "intadapt(f2, eps(), pi, 1e-8)"
    ]
   },
   {
@@ -416,7 +548,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -424,7 +556,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
