--- a/W10-matrix-intro.ipynb
+++ b/W10-matrix-intro.ipynb
@@ -828,10 +828,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4d085366",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26-element Vector{Float64}:\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 0.3843137254901961\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Float64.(Gray.(A))[75,75:100]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c69a313c-c1c0-4c4b-8ef7-74d1621ec87a",
+   "id": "f2b58c11",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "## Data tables\n",
     "\n",
     "* [US Congress voting records](https://www.congress.gov/roll-call-votes)"
