--- a/W12-PDE-method-lines.ipynb
+++ b/W12-PDE-method-lines.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "$$ u_t = k u_{xx}.$$\n",
     "\n",
+    "This is an example of a parabolic partial differential equation. For the definition (a constraint on the coefficients of $u_{xx}$, $u_{tx}$ and $u_{tt}) see [Wikipedia](https://en.wikipedia.org/wiki/Parabolic_partial_differential_equation).\n",
+    "\n",
     "To solve the equation you also need to describe\n",
     "\n",
     "* the value of any constants, $k=1$,\n",
@@ -22,7 +24,7 @@
     "\n",
     "We will solve this problem by discretizing space ($x$) and solving a set of initial value problems.\n",
     "\n",
-    "For the boundary and initial conditions described above, we have already provided a solution. In general we will want to find a numerical solution.\n",
+    "For the boundary and initial conditions described above, we want to find a numerical solution for future time $t$.\n",
     "\n",
     "A useful simplification is to \"get rid of\" boundary conditions by imposing periodic boundary conditions. If the domain is $[0, L]$ this means that $u(t, x) = u(t, x+L)$.\n",
     "\n",
@@ -116,7 +118,7 @@
     "\n",
     "$$u_{j+1} = u_j + \\tau D_{xx} u_j = u_j (I + \\tau D_{xx}).$$\n",
     "\n",
-    "We need initial conditions different from the ones used above so that we will see a time evolution of the solution.\n",
+    "We will use an initial condition of a peak in the middle of the interval on the x-axis. This function is not quite periodic (the derivatives at the left and right endpoints are close to zero, but opposite in sign.\n",
     "\n",
     "We will have 100 divisions of the space axis and 2400 time steps."
    ]
@@ -11615,7 +11617,7 @@
    "id": "6193cbde-adca-4340-9da6-ddba4b236350",
    "metadata": {},
    "source": [
-    "Exercise 5. Solve $u_t = 4u + u_{xx}$. This problem has exponential growth and diffusion."
+    "**Exercise 5**. Solve $u_t = 4u + u_{xx}$. This problem has exponential growth and diffusion."
    ]
   },
   {
